--- a/index.html
+++ b/index.html
@@ -11,12 +11,18 @@
 
   <script src="js/index.js" async></script>
 
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.0.5/gsap.min.js"></script> -->
+  
+
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
 </head>
 
 <body>
+  <!-- <script>
+    document.body.classList.add('fade');
+  </script> -->
 
   <header class="main-navigation">
     <div class="container nav-container">
@@ -60,7 +66,7 @@
     <section class="content-destination">
       <h2>Pick Your Destination</h2>
       <p>Expedition excursion design darn excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
-      <img src="img/destination.jpg" alt="Second slide">
+      <img src="img/destination.jpg" class="img-dest" alt="Second slide">
     </section>
     <section class="content-pick">
 
@@ -85,6 +91,10 @@
   <footer class="footer">
     <p>Copyright Fun Bus 2018</p>
   </footer>
-
+  <!-- <script>
+    document.addEventListener("DOMContentLoaded", function(e) {
+    document.body.classList.remove('fade');
+  });
+  </script> -->
 </body>
 </html>
